# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

chartsdatadir = ${datadir}/chartsd

chartsdata_DATA = \
	README AUTHORS COPYING INSTALL

EXTRA_DIST = \
	config.guess config.sub ltmain.sh

SUBDIRS = \
	src scripts charts.d
